<resources>
    <string name="app_name">Checkers</string>
    <string name="title_activity_credits">Credits</string>
    <string name="logo">logo</string>
    <string name="username">Username</string>
    <string name="entrar">Login</string>
    <string name="esqueci_a_password">Forgot my password</string>
    <string name="password">Password</string>
    <string name="registar_aqui">Sign in here</string>
    <string name="bar">|</string>
    <string name="textview">TextView</string>
    <string name="date">Date</string>
    <string name="perfil">Profile</string>
    <string name="credits">Credits</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="registar">Sign in</string>
    <string name="login">You\'re already signed in</string>
    <string name="joincpu">Play vs cpu</string>
    <string name="joinon">Play online</string>
    <string name="createoff">Create game offline</string>
    <string name="createon">Create game online</string>
    <string name="start">Start</string>
    <string name="playertwoname">Insert name here</string>
    <string name="choosename">Player 2, choose your name</string>
    <string name="playerone">Player 1</string>
    <string name="playertwo">Player 2</string>
    <string name="chooseside">Choose your color (white discs start first)</string>
    <string name="confirm">Confirm</string>
    <string name="eaten">Discs eaten: </string>
    <string name="nooption">Please, choose a color and insert a name</string>
    <string name="error_netconn">No network connection</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="leave">Do you want to leave? You will lose this game</string>
    <string name="waiting">Waiting for client</string>
    <string name="gamefinished">The game was finished</string>
    <string name="server">Server IP</string>
    <string name="cpu">Do you want to change this player for CPU?</string>
    <string name="player">Do you want to change CPU for another player?</string>
    <string name="newplayer">Insert new player name here</string>
    <string name="finish">The game has finished!</string>
    <string name="result">Score</string>
    <string name="winner">Winner</string>
    <string name="loser">Loser</string>
</resources>
