<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.isec.a21230117.amovtp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="130dp"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:onClick="createOfflineGame"
            android:text="@string/createoff"
             />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="createCPUGame"
            android:text="@string/joincpu"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="130dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/linearLayout"
        android:id="@+id/linearLayout2">

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="createOnlineGame"
            android:text="@string/createon"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="joinOnlineGame"
            android:text="@string/joinon"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_alignTop="@+id/linearLayout2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="130dp">

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/perfil"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/white"/>
    </LinearLayout>

</RelativeLayout>
